fix: codigo comentado para a paz do desenvolvedor